fixed vhosts typo from vhost
